# Gradius-Remake

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.gitignore  run.sh
doxygen documentation/: _animation_8cpp.html  _animation_8h.html  _animation_8h__dep__incl.map  _animation_8h__dep__incl.md5  _animation_8h__incl.map  _animation_8h__incl.md5  _background_8cpp.html  _background_8cpp__incl.map  _background_8cpp__incl.md5  _background_8h.html  _background_8h__dep__incl.md5  _background_8h__incl.map  _background_8h__incl.md5  _background_8h_source.html  _border_8cpp__incl.map  _border_8cpp__incl.md5  _border_8h__dep__incl.map  _border_8h__incl.map  _border_8h__incl.md5  _border_8h_source.html  _enemy_8h.html  (+380 more)
src/: CMakeLists.txt  Game.cpp  Game.h  GameGlobals.h  Makefile  main.cpp
src/Controller/: Controller.cpp  Controller.h
src/Game/: Game.cpp  Game.h  GameExceptions.h  Scoreboard.cpp  Scoreboard.h
src/MVC/: View.cpp
src/Model/: EntityFactory.cpp  EntityFactory.h  EventQueue.cpp  EventQueue.h  Events.cpp  Events.h  Model.cpp  Model.h  PlayerData.cpp  PlayerData.h
src/Model/Entities/: Background.cpp  Background.h  Border.cpp  Border.h  CrystalBoss.cpp  CrystalBoss.h  DynamicEntity.cpp  DynamicEntity.h  Enemy.cpp  Enemy.h  EnemyBullet.cpp  EnemyBullet.h  EnemyGrunt.cpp  EnemyGrunt.h  EnemyLaser.cpp  EnemyLaser.h  EnemyShooter.cpp  EnemyShooter.h  Entity.cpp  Entity.h  FlyingObstacle.cpp  FlyingObstacle.h  FlyingSaucer.cpp  FlyingSaucer.h  Friendly.cpp  Friendly.h  Neutral.cpp  Neutral.h  Player.cpp  Player.h  PlayerBullet.cpp  PlayerBullet.h  SaucerBoss.cpp  SaucerBoss.h  ShooterBoss.cpp  ShooterBoss.h  World.cpp  World.h
src/Utilities/: Singleton.h  Stopwatch.cpp  Stopwatch.h  Transformation.cpp  Transformation.h
src/View/: Animation.cpp  Animation.h  StatusDisplay.cpp  StatusDisplay.h  View.cpp  View.h
src/entities/: Entity.h
(+390 files in other folders)
